# openapi-python-client

./: test.json
slurm-rest-api-client/: README.md  pyproject.toml
slurm-rest-api-client/slurm_rest_api_client/: client.py  types.py
slurm-rest-api-client/slurm_rest_api_client/api/slurm/: delete_job.py  delete_jobs.py  delete_node.py  get_diag.py  get_job.py  get_jobs.py  get_jobs_state.py  get_licenses.py  get_node.py  (+13 more)
slurm-rest-api-client/slurm_rest_api_client/models/: __init__.py  delete_job_flags.py  get_job_flags.py  get_jobs_flags.py  get_node_flags.py  get_nodes_flags.py  get_partition_flags.py  get_partitions_flags.py  v0042_acct_gather_energy.py  v0042_acct_gather_profile_item.py  v0042_assoc_shares_obj_wrap.py  v0042_assoc_shares_obj_wrap_fairshare.py  v0042_assoc_shares_obj_wrap_tres.py  v0042_assoc_shares_obj_wrap_type_item.py  v0042_bf_exit_fields.py  v0042_controller_ping.py  v0042_cpu_binding_flags_item.py  v0042_cr_type_item.py  v0042_cron_entry.py  v0042_cron_entry_flags_item.py  v0042_cron_entry_line.py  v0042_float_64_no_val_struct.py  v0042_job_alloc_req.py  v0042_job_array_response_msg_entry.py  v0042_job_desc_msg.py  v0042_job_desc_msg_rlimits.py  v0042_job_flags_item.py  v0042_job_info.py  v0042_job_info_job_resources_type_0.py  v0042_job_info_job_resources_type_0_nodes.py  v0042_job_info_power.py  v0042_job_mail_flags_item.py  v0042_job_res_core.py  v0042_job_res_core_status_item.py  v0042_job_res_node.py  v0042_job_res_node_cpus.py  v0042_job_res_node_memory.py  v0042_job_res_socket.py  v0042_job_shared_item.py  v0042_job_state_item.py  (+73 more)
(+16 files in other folders)
