[project]
name = "slurm-rest-api-client"
version = "v0.0.42"
description = "A client library for accessing Slurm REST API"
authors = []
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "pydantic>=2",
    "python-dateutil>=2.8.0,<3",
]

[tool.uv.build-backend]
module-name = "slurm_rest_api_client"
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
